# ParameterRun

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
examples/: long_example.py  minimal_example.py  minimal_example_mpi.py
scripts/: bump_version.py
src/parameterrun/: __init__.py  parallel_utils.py
tests/: test_dephs.py  test_format_input.py  test_get_iteration.py  test_joblib.py  test_mpi_integration.py  test_normalized_time.py  test_parameter_run.py  test_pbar_format.py
