[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "parameterrun"
version = "0.1.0"
description = "Parallel parameter sweeps with joblib/MPI and tqdm progress bars."
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "David Fernández-Fernández", email = "david.fernandezf@hotmail.com" }
]
requires-python = ">=3.9"
keywords = ["parallel", "parameter-sweep", "joblib", "mpi", "scientific-computing", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.23",
    "joblib>=1.3",
    "tqdm>=4.66"
]

[project.urls]
Homepage = "https://github.com/Davtax/ParameterRun"
Repository = "https://github.com/Davtax/ParameterRun"
Issues = "https://github.com/Davtax/ParameterRun/issues"
Changelog = "https://github.com/Davtax/ParameterRun/blob/main/CHANGELOG.md"

[project.optional-dependencies]
mpi = [
    "mpi4py>=3.1"
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.11",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/parameterrun"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=parameterrun --cov-report=term-missing --cov-fail-under=70"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.9"
files = ["src", "tests"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true
